--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.1",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.0",
     "nodemailer": "^6.10.1",
     "uuid": "^11.1.0"
   },
